# simpletest

./: CMakeLists.txt  README.md  mpich-spack.yaml  openmpi-spack.yaml  python.py  spectrum-spack.yaml
src/: Main.cpp
